[package]
name = "wasmer-katex-poc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
wasmer-wasi = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.wasmer]
version = "2"
default-features = false
features = [ "default-cranelift", "default-universal" ]
